<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtCtrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/str_ctrl"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="15sp"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_weight="0"
        android:gravity="start"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/btnLigaDesliga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="Ligar"
            android:textOn="Desligar" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtCor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/str_rgb"
        android:textAllCaps="true"
        android:textSize="15sp" />

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtCor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/str_r"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="0"
        android:max="100"
        android:progress="50" />

    <TextView
        android:id="@+id/txtCor3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/str_g"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="0"
        android:max="100"
        android:progress="50" />

    <TextView
        android:id="@+id/txtCor4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/str_b"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed" />

    <SeekBar
        android:id="@+id/seekBar4"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="0"
        android:max="100"
        android:progress="50" />

</LinearLayout>